[tool.poetry]
name = "price-updater"
version = "0.1.0"
description = ""
authors = ["Matheus Alencastro"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
pandas = "^2.2.3"
streamlit = "^1.40.1"
pytest = "^8.3.3"
holidays = "^0.61"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
